# neurohelmet

./: .git-blame-ignore-revs  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE.md  README.md  ROADMAP.md  SECURITY.md
crates/app/: Cargo.toml
crates/app/src/: export.rs  main.rs  pdf.rs  publish.rs  render.rs
crates/app/src/tui/: app.rs  config.rs  filters.rs  forcegen.rs  icons.rs  mod.rs  picker.rs  profile.rs  screenshots.rs  theme.rs  view.rs
crates/app/src/tui/snapshots/: neurohelmet__tui__tests__dice_cluster.snap  neurohelmet__tui__tests__dice_hit_location.snap  neurohelmet__tui__tests__dice_single_weapon.snap  neurohelmet__tui__tests__e2e_acs_initial_renders_three_panes.snap  neurohelmet__tui__tests__e2e_active_bin_marker.snap  neurohelmet__tui__tests__e2e_add_unit_modal_alpha_strike_skill_pv.snap  neurohelmet__tui__tests__e2e_add_unit_modal_bf.snap  neurohelmet__tui__tests__e2e_add_unit_modal_sbf.snap  neurohelmet__tui__tests__e2e_add_unit_modal_shows_skill_cost.snap  neurohelmet__tui__tests__e2e_aero_graded_engine_crit.snap  neurohelmet__tui__tests__e2e_aero_weapon_crit_popup.snap  neurohelmet__tui__tests__e2e_aerospace_as_card.snap  neurohelmet__tui__tests__e2e_aerospace_classic_doll.snap  neurohelmet__tui__tests__e2e_alpha_strike_card.snap  neurohelmet__tui__tests__e2e_alpha_strike_grid.snap  neurohelmet__tui__tests__e2e_as_after_damage.snap  neurohelmet__tui__tests__e2e_as_crit_popup.snap  neurohelmet__tui__tests__e2e_as_ground_scale_toggle.snap  neurohelmet__tui__tests__e2e_as_heat_shutdown.snap  neurohelmet__tui__tests__e2e_as_to_hit_shot.snap  neurohelmet__tui__tests__e2e_ba_classic_doll.snap  neurohelmet__tui__tests__e2e_ba_per_suit_ammo.snap  neurohelmet__tui__tests__e2e_battle_armor_as_card.snap  neurohelmet__tui__tests__e2e_bf_crit_modal.snap  neurohelmet__tui__tests__e2e_bf_doctrine_auto_group.snap  neurohelmet__tui__tests__e2e_bf_group_editor.snap  neurohelmet__tui__tests__e2e_bf_help_modal.snap  neurohelmet__tui__tests__e2e_bf_initial.snap  neurohelmet__tui__tests__e2e_bf_large_craft_arc_card.snap  neurohelmet__tui__tests__e2e_bf_shot_modal.snap  neurohelmet__tui__tests__e2e_bf_tracking.snap  neurohelmet__tui__tests__e2e_bf_vehicle_crit_modal.snap  neurohelmet__tui__tests__e2e_cascade_destroyed.snap  neurohelmet__tui__tests__e2e_ci_classic_platoon.snap  neurohelmet__tui__tests__e2e_confirm_modal.snap  neurohelmet__tui__tests__e2e_crit_popup.snap  neurohelmet__tui__tests__e2e_delete_session_confirm.snap  neurohelmet__tui__tests__e2e_dice_full_cluster_table.snap  neurohelmet__tui__tests__e2e_emplacement_as_card.snap  neurohelmet__tui__tests__e2e_engine_destroyed_banner.snap  (+63 more)
crates/app/tests/: extra_units.rs
crates/bake/: Cargo.toml
crates/bake/src/: avail.rs  extras.rs  fetch.rs  join.rs  main.rs  svg.rs
docs/: RELEASING.md  (+10 more)
(+65 files in other folders)
