[workspace]
resolver = "2"
members = ["crates/core", "crates/bake", "crates/app"]

[workspace.package]
version = "0.2.0"
edition = "2021"
# Code: GPLv3-or-later (matches the MegaMek ecosystem). The bundled BattleTech data
# (data/mechs.bin) is separately CC-BY-NC-SA-4.0 — see NOTICE.md.
license = "GPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bincode = { version = "2", features = ["serde"] }
neurohelmet-core = { path = "crates/core" }
