[package]
name = "neurohelmet"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "neurohelmet"
path = "src/main.rs"

[dependencies]
neurohelmet-core.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs = "5"
ratatui = "0.29"
nucleo-matcher = "0.3"
color-eyre = "0.6"
font8x8 = "0.3.1"
png = "0.18.1"
svg2pdf = "0.13"
pdf-writer = "0.12"

[dev-dependencies]
insta = "1"
tempfile = "3.27.0"
