[package]
name = "neurohelmet"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Keyboard-driven terminal BattleTech record-sheet tracker (Classic, Alpha Strike, and more)."
homepage = "https://github.com/tympaniplayer/neurohelmet"
repository = "https://github.com/tympaniplayer/neurohelmet"

# Metadata for `cargo deb` (Debian package built in the release workflow). The
# dataset is embedded in the binary, so the package has no runtime dependencies
# beyond libc; cargo-deb auto-installs the binary to /usr/bin.
[package.metadata.deb]
maintainer = "Nate Palmer <nate@natedpalm.com>"
section = "games"
priority = "optional"
extended-description = """
Neurohelmet is a keyboard-driven terminal (TUI) tracker for BattleTech record \
sheets, covering Classic BattleTech, Alpha Strike, and several other game modes. \
The full unit dataset is embedded in the binary, so it runs fully offline with \
no external files."""

[[bin]]
name = "neurohelmet"
path = "src/main.rs"

[dependencies]
neurohelmet-core.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs = "5"
ratatui = "0.29"
nucleo-matcher = "0.3"
color-eyre = "0.6"
font8x8 = "0.3.1"
png = "0.18.1"
svg2pdf = "0.13"
pdf-writer = "0.12"

[dev-dependencies]
insta = "1"
tempfile = "3.27.0"
